--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,10 @@
   </head>
   <body>
     <h1>Contact Page</h1>
-    <p>Email: drojo@sisd.net</p>
-    <p>Phone: (915)-777-8987</p>
+    <p>Email: dorianhrojo@gmail.com</p>
     <p><a href="index.html">return</a></p>
 
-  <form class="" action="index.html" method="post">
+  <form action="mailto:dorianhrojo@gmail.com" method="post" enctype="text/plain">
     <p><label for="name">Your Name: </label>
     <input type="text" name="name" value="name"></p>
     <p><label for="email">Your Email: </label>
