--- a/hobbies.html
+++ b/hobbies.html
@@ -8,8 +8,11 @@
     <h3>My Hobbies</h3>
     <ol>
       <li>Jiu Jitsu</li>
+      <li>Audiobooks</li>
+      <li>Online Learning</li>
+      <li>Reading</li>
       <li>Video Games</li>
-      <li>Popcorn and movies</li>
+      <li>Family Movie Night</li>
     </ol>
     <p><a href="index.html">return</a></p>
   </body>
