--- a/index.html
+++ b/index.html
@@ -48,8 +48,16 @@
             <td>⭐⭐⭐⭐⭐</td>
           </tr>
           <tr>
-            <td>PHP</td>
+            <td>HTML</td>
             <td>⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>CSS</td>
+            <td>⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>PHP</td>
+            <td>⭐⭐⭐</td>
           </tr>
         </table></td>
         <td><table>
