--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="dorian.png" alt="Dorian's profile picture" /></td>
+        <td><img src="images/dorian.png" alt="Dorian's profile picture" /></td>
         <td><h1>Dorian Rojo</h1>
         <p><em>High School Math Teacher and <strong>Jiu Jitsu Black Belt.</strong></em></p>
         <p>I am a high school math teacher and jiu jitsu coach.  I 💓 coffee in the morning.</p></td>
