--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </table>
     <hr>
     <a href="hobbies.html">My Hobbies</a>
-    <a href="contact.html">Contact me</a>
+    <a href="contact.html">Contact Me</a>
 
   </body>
 </html>
