--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <hr>
     <h3>Favorite Books</h3>
     <ul>
-      <li><a href="https://www.bible.com/">The Bible</a></li>
-      <li><a href="https://www.amazon.com/dp/B0010WL876/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1">Think and Grow Rich</a></li>
-      <li><a href="https://www.amazon.com/dp/B009WPVS6Y/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1">The Greatest Salesman in the World</a></li>
-      <li><a href="https://www.amazon.com/dp/B08JZF7GK9/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1">Richest Man in Babylon</a></li>
-      <li><a href="https://www.amazon.com/dp/B00AKKS278/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1">Miracle Morning</a></li>
+      <li>The Bible</li>
+      <li>The Power of Positive Thinking by Napolean Hill</li>
+      <li>How to Stop Worrying and Start Living by Dale Carnegie</li>
+      <li>The Greatest Salesman in the World by Og Mandino</li>
+      <li>The Noticer by Andy Andrews</li>
     </ul>
     <hr>
     <h3>Work Experience</h3>
@@ -29,13 +29,9 @@
         <th>Year</th>
         <th>Job</th>
       </tr>
-      <tr>
-        <td>2011-2021</td>
-        <td>High School Math Teacher</td>
-      </tr>
-      <tr>
-        <td>2008-2011</td>
-        <td>College Math Tutor</td>
+       <tr>
+        <td>Since September 2006</td>
+        <td>Jiu Jitsu Martial Artist</td>
       </tr>
     </table>
     <hr>
@@ -44,30 +40,30 @@
       <tr>
         <td><table>
           <tr>
-            <td>Jiu Jitsu</td>
+            <td>Front Chokes</td>
             <td>⭐⭐⭐⭐⭐</td>
           </tr>
           <tr>
-            <td>HTML</td>
+            <td>Back Chokes</td>
             <td>⭐⭐⭐⭐</td>
           </tr>
           <tr>
-            <td>CSS</td>
+            <td>Arm Bars</td>
             <td>⭐⭐⭐⭐</td>
           </tr>
         </table></td>
         <td><table>
           <tr>
-            <td>PHP</td>
+            <td>Triangles</td>
             <td>⭐⭐⭐</td>
           </tr>
           <tr>
-            <td>SQL</td>
+            <td>Kimuras</td>
             <td>⭐⭐⭐</td>
           </tr>
           <tr>
-            <td>Javascript</td>
-            <td>⭐⭐</td>
+            <td>Dancing</td>
+            <td>⭐</td>
           </tr>
         </table></td>
       </tr>
