--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <hr>
     <h3>Favorite Books</h3>
     <ul>
-      <li>The Bible</li>
+      <li>The Holy Bible</li>
       <li>The Power of Positive Thinking by Napolean Hill</li>
       <li>How to Stop Worrying and Start Living by Dale Carnegie</li>
       <li>The Greatest Salesman in the World by Og Mandino</li>
