--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
       <li>The Noticer by Andy Andrews</li>
     </ul>
     <hr>
-    <h3>Work Experience</h3>
+    <h3>Jiu Jitsu Experience</h3>
     <table>
       <tr>
         <th>Year</th>
         <th>Job</th>
       </tr>
        <tr>
-        <td>Since September 2006</td>
-        <td>Jiu Jitsu Martial Artist</td>
+        <td>2006-Present</td>
+        <td>Jiu Jitsu</td>
       </tr>
     </table>
     <hr>
