--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <table>
       <tr>
         <th>Year</th>
-        <th>Job</th>
+        <th>Hobby</th>
       </tr>
        <tr>
         <td>2006-Present</td>
